--- a/blazor.render/Client/Pages/FetchData.razor
+++ b/blazor.render/Client/Pages/FetchData.razor
@@ -1,5 +1,6 @@
 ﻿@page "/fetchdata"
 @using blazor.render.Shared
+@using table.lib
 @inject HttpClient Http
 
 <h1>Weather forecast</h1>
@@ -14,33 +15,41 @@ else
 {
     <table class="table">
         <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
+        <tr>
+            <th>Date</th>
+            <th>Temp. (C)</th>
+            <th>Temp. (F)</th>
+            <th>Summary</th>
+        </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
+        @foreach (var forecast in forecasts)
+        {
+            <tr>
+                <td>@forecast.Date.ToShortDateString()</td>
+                <td>@forecast.TemperatureC</td>
+                <td>@forecast.TemperatureF</td>
+                <td>@forecast.Summary</td>
+            </tr>
+        }
         </tbody>
     </table>
+    <div>
+        @render.Replace(Environment.NewLine, "<br>");
+    </div>
+
 }
 
 @code {
     private WeatherForecast[] forecasts;
-
+    private List<WeatherForecast> output;
+    private string render;
     protected override async Task OnInitializedAsync()
     {
         forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
+
+        output = forecasts.ToList();
+        render = Table<WeatherForecast>.Add(output).ToString();
     }
 
 }
