--- a/blazor.render/Client/Pages/FetchData.razor
+++ b/blazor.render/Client/Pages/FetchData.razor
@@ -7,49 +7,24 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-@if (forecasts == null)
+@if (_forecasts == null)
 {
     <p><em>Loading...</em></p>
 }
 else
 {
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var forecast in forecasts)
-        {
-            <tr>
-                <td>@forecast.Date.ToShortDateString()</td>
-                <td>@forecast.TemperatureC</td>
-                <td>@forecast.TemperatureF</td>
-                <td>@forecast.Summary</td>
-            </tr>
-        }
-        </tbody>
-    </table>
     <div>
-        @render.Replace(Environment.NewLine, "<br>");
+        @((MarkupString)_render)
     </div>
-
 }
 
 @code {
-    private WeatherForecast[] forecasts;
-    private List<WeatherForecast> output;
-    private string render;
+    private List<WeatherForecast> _forecasts;
+    private string _render;
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
-
-        output = forecasts.ToList();
-        render = Table<WeatherForecast>.Add(output).ToString();
+        _forecasts = await Http.GetFromJsonAsync<List<WeatherForecast>>("WeatherForecast");
+        _render = Table<WeatherForecast>.Add(_forecasts).ToHtml();
     }
 
 }
